add_subdirectory(Common)
add_subdirectory(LowLevel)
add_subdirectory(LowLevelCloth)
add_subdirectory(PhysX)
add_subdirectory(PhysXExtensions)
add_subdirectory(PhysXCooking)
add_subdirectory(PhysXProfileSDK)
add_subdirectory(PhysXVehicle)
add_subdirectory(PhysXVisualDebuggerSDK)
add_subdirectory(PhysXMetaData)
add_subdirectory(pxtask)
add_subdirectory(foundation)
add_subdirectory(SceneQuery)
add_subdirectory(SimulationController)